// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text a 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  a
</p>
`;

exports[`Text b 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  b
</p>
`;

exports[`Text basic 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  basic
</p>
`;

exports[`Text body 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  body
</p>
`;

exports[`Text body-bold 1`] = `
<p
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold
</p>
`;

exports[`Text brand 1`] = `
<p
  className="typography typography_size-body typography_color-brand"
>
  brand
</p>
`;

exports[`Text brand-1 1`] = `
<p
  className="typography typography_size-body typography_color-brand-1"
>
  brand-1
</p>
`;

exports[`Text caption 1`] = `
<p
  className="typography typography_size-caption typography_color-basic"
>
  caption
</p>
`;

exports[`Text caption-bold 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold
</p>
`;

exports[`Text disabled 1`] = `
<p
  className="typography typography_size-body typography_color-disabled"
>
  disabled
</p>
`;

exports[`Text em 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  em
</p>
`;

exports[`Text error 1`] = `
<p
  className="typography typography_size-body typography_color-error"
>
  error
</p>
`;

exports[`Text headers 1`] = `
<p
  className="typography typography_size-body typography_color-headers"
>
  headers
</p>
`;

exports[`Text i 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  i
</p>
`;

exports[`Text inherit 1`] = `
<p
  className="typography typography_size-body typography_color-inherit"
>
  inherit
</p>
`;

exports[`Text inverse 1`] = `
<p
  className="typography typography_size-body typography_color-inverse"
>
  inverse
</p>
`;

exports[`Text large 1`] = `
<p
  className="typography typography_size-large typography_color-basic"
>
  large
</p>
`;

exports[`Text large-bold 1`] = `
<p
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold
</p>
`;

exports[`Text legend 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  legend
</p>
`;

exports[`Text link 1`] = `
<p
  className="typography typography_size-body typography_color-link"
>
  link
</p>
`;

exports[`Text p 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  p
</p>
`;

exports[`Text secondary 1`] = `
<p
  className="typography typography_size-body typography_color-secondary"
>
  secondary
</p>
`;

exports[`Text span 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  span
</p>
`;

exports[`Text strong 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  strong
</p>
`;

exports[`Text success 1`] = `
<p
  className="typography typography_size-body typography_color-success"
>
  success
</p>
`;

exports[`Text warning 1`] = `
<p
  className="typography typography_size-body typography_color-warning"
>
  warning
</p>
`;
